# crabbox

./: .gitignore  Cargo.toml  README.md
projects/axum_url_shortener/: Cargo.toml
projects/axum_url_shortener/src/: main.rs  models.rs
projects/book_tracker_api/: .env  Cargo.toml  diesel.toml
projects/book_tracker_api/migrations/2025-04-27-102515_create_books/: up.sql
projects/book_tracker_api/src/: db.rs  handlers.rs  main.rs  models.rs  schema.rs
projects/expense-tracker/: Cargo.toml
projects/expense-tracker/src/: main.rs  models.rs  store.rs
projects/expense-tracker/src/commands/: add.rs  list.rs  mod.rs  modify_expense.rs  remove.rs
projects/notes-api/: Cargo.toml
projects/notes-api/src/: main.rs  models.rs
projects/timetracker/: Cargo.toml
projects/timetracker/src/: commands.rs  main.rs  storage.rs  time_utils.rs
projects/todo-app/: Cargo.toml
projects/todo-app/src/: main.rs  models.rs  store.rs
