[package]
name = "book_tracker_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"  # For loading environment variables
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"



[dependencies.diesel_migrations]
version = "2.1"
features = ["postgres"]
